2006-08-12  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (EXTRA_DIST) Removed developers/update-vm-list.
	(BUILD_ENVIRONMENT-make) Added kaffe-vminterface.jar.

	* configure.ac: Don't compile GNU Classpath with --with-vm-classes
	from Kaffe. Output libraries/javalib/gnu-inet/Makefile and 
	libraries/javalib/vmspecific/Makefile.

	* developers/autogen.sh: Don't call update-vm-list.

	* include/Makefile.am (KAFFEH_CLASSPATH) Added kaffe-vminterface.jar.

	* kaffe/scripts/kaffe.in: Added kaffe-vminterface.jar.

	* libraries/javalib/Makefile.am: Replaced by libraries/javalib/Makefile.am.in.
	(SUBDIRS) Added gnu-inet and vmspecific. 
	(EXTRA_DIST) Removed vmspecific files and Makefile.am.in.

	* libraries/javalib/zlib-zip/Makefile.am,
	libraries/javalib/dnsjava/Makefile.am (CPATH): Added kaffe-vminterface.jar.

	* test/regression/TestScript.in: (JAVA_COMPILER) Added kaffe-vminterface.jar
	to bootclasspath.

	* developers/update-vm-list,
	libraries/javalib/Makefile.am.in,
	libraries/javalib/vmspecific/META-INF/MANIFEST.MF:
	Removed.

	* libraries/javalib/vmspecific/gnu/inet/comsat/ComsatClient.java,
	libraries/javalib/vmspecific/gnu/inet/comsat/ComsatInfo.java,
	libraries/javalib/vmspecific/gnu/inet/finger/FingerConnection.java,
	libraries/javalib/vmspecific/gnu/inet/finger/FingerURLConnection.java,
	libraries/javalib/vmspecific/gnu/inet/finger/Handler.java,
	libraries/javalib/vmspecific/gnu/inet/gopher/DirectoryEntry.java,
	libraries/javalib/vmspecific/gnu/inet/gopher/DirectoryListing.java,
	libraries/javalib/vmspecific/gnu/inet/gopher/GopherConnection.java,
	libraries/javalib/vmspecific/gnu/inet/gopher/GopherContentHandler.java,
	libraries/javalib/vmspecific/gnu/inet/gopher/GopherURLConnection.java,
	libraries/javalib/vmspecific/gnu/inet/gopher/Handler.java,
	libraries/javalib/vmspecific/gnu/inet/imap/IMAPConnection.java,
	libraries/javalib/vmspecific/gnu/inet/imap/IMAPConstants.java,
	libraries/javalib/vmspecific/gnu/inet/imap/IMAPException.java,