@@ -1,5 +1,9 @@
 2006-08-12  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/javalib/gmp-math/Makefile.am: Replaced by new build system.
+
+2006-08-12  Dalibor Topic  <robilad@kaffe.org>
+
 	* Makefile.am (EXTRA_DIST) Removed developers/update-vm-list.
 	(BUILD_ENVIRONMENT-make) Added kaffe-vminterface.jar.
 
